--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     1.<span style="color:#ff0000;">请务必收藏本网页,防止域名无法访问而失联,通过本网页获取最新可访问地址</span>
    </p>
    <p>
-    2. 向邮箱：xingqiutangdizhi@gmail.com  发送邮件获取最新地址
+    2. 向邮箱：yanzhaowangdizhi@gmail.com  发送邮件获取最新地址
    </p>
 </div>
 <div style="text-align:center;">
